k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app
  ports:
  - port: 80            # External port
    targetPort: 3000     # Port on which the container listens
  type: ClusterIP        # Defau
